# Industrial Upgrade (Modified Fork)
This is a fork of the Industrial Upgrade mod by ZelGimi.

**Changes made:**
- The operation of primitive devices has been significantly accelerated